Some projects structure refactoring. Comments added.
